@@ -41,10 +41,12 @@ AUX openssl-1.0.0b-rev19998.patch 662 RMD160 9f778f8c90e4d49bf2c8664dac4189a5517
 DIST openssl-0.9.8o.tar.gz 3772542 RMD160 c2e455a17bce59c8a54522ffaa26c3a5cb26b510 SHA1 80c73afc7dca790cd26936cb392a4dfd14d4e4d7 SHA256 befada1ac3819b1d317df8197b5e82ec768b39d250fcbef81e2b1cb7f165d448
 DIST openssl-1.0.0a.tar.gz 4015794 RMD160 f46ea1d0875ef523662e652f22faf0f0f261f354 SHA1 b837a9f75a51f456bd533690cf04d3d5714812dc SHA256 18a9bd1fc02b8ef90dded34fafaa9089baaafef278a19fc4e89c2ab0dcf70f63
 DIST openssl-1.0.0b.tar.gz 4019360 RMD160 4c661c812315c25b3ab8f0f92d52430529f890d1 SHA1 cccb125b29f2fa209edb114258d22aeca4e871a2 SHA256 4e7b4e2fb33ee2d97c5e143561ab495dbbfc08f0a863e617a0c7adca19017331
+DIST openssl-1.0.0c.tar.gz 4023056 RMD160 3053569d12c55fca80d718044d277bc44358d384 SHA1 5a2d74fa7fe90c80915332404b9700044ef676a1 SHA256 f731b36de3edaa361179ae6f449668b248a360e34e31e92902d976e9b9d604eb
 DIST openssl-c_rehash.sh.1.7 4167 RMD160 c87f12c5421593d160f0cc650921c2e3412869ab SHA1 54493c80be245f2da9b7d303e49d613d376d9609 SHA256 4999ee79892f52bd6a4a7baba9fac62262454d573bbffd72685d3aae9e48cee0
 DIST openssl-c_rehash.sh?rev=1.7 4167 RMD160 c87f12c5421593d160f0cc650921c2e3412869ab SHA1 54493c80be245f2da9b7d303e49d613d376d9609 SHA256 4999ee79892f52bd6a4a7baba9fac62262454d573bbffd72685d3aae9e48cee0
 EBUILD openssl-0.9.8o-r2.ebuild 6622 RMD160 ba3f9e0a26a81cadb03971c62a17cbd6a4bdd899 SHA1 f1a3361e2aef4bf5d0e89fa08335e694de3cb85f SHA256 5559290261e104bfa2ebb683a4e1b16b61dfe532d5605bb8e44130ab5425e497
 EBUILD openssl-1.0.0a-r3.ebuild 8456 RMD160 312855bf64f6853453affdb89fc88da5307c24f2 SHA1 786dd3ddd94b224c83ec3f2a0689620182b1decc SHA256 60ab529708482eb0b259c17c7a9fcba680ef0410c4d01b8658ff2a68b09c028f
 EBUILD openssl-1.0.0b-r1.ebuild 8357 RMD160 2d2d019e8230ade623ced34243509279542a639b SHA1 87212e038d5df2512f451c8595d855b9178e25c8 SHA256 44b017ec9d3ae6c12266dc96c3ca7dbf56c0159ed9c6099a183867239f58a96c
-MISC ChangeLog 56071 RMD160 21b495c654649a77dff2207c6080189ef42f720b SHA1 299df47946e355871f0e9f76016cb41af6b653e7 SHA256 31c8cd6e0818fc49b6a24f253508c79c12cca2b1d71a5dc75b43fec5ab5b135f
+EBUILD openssl-1.0.0c.ebuild 8276 RMD160 492f4fed845854c904ff46fbf7a02ae70c5a8737 SHA1 33d3d9a02941ec89da5dd58eb30862ac24246291 SHA256 5f1b66784feee49865cbfc54c475becaf1cfbd262370ecdc87d6bed2155cf46d
+MISC ChangeLog 56315 RMD160 adf9484a39074e2a000ee814ecaf3d4f1d6cb26a SHA1 3364fadb991572c7f29dcf7ec1f13879291f159c SHA256 321ebb41417c416bc673ff0824b0348a11ae798130e299f3f86419e018035c7b
 MISC metadata.xml 290 RMD160 5aee06348916e9fbcdab233e8babb0ed08260ca5 SHA1 f798e6a59f370931dc151fcff9a473eabda44ab9 SHA256 828c7b974fc1bbac92f75490c85897b27cd3cacce021f56ad1b4ef06d28fe7bd
