@@ -1,6 +1,16 @@
 # ChangeLog for dev-libs/openssl
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/openssl/ChangeLog,v 1.372 2010/11/28 14:34:36 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/openssl/ChangeLog,v 1.374 2010/12/02 22:25:53 vapier Exp $
+
+*openssl-0.9.8q (02 Dec 2010)
+
+  02 Dec 2010; Mike Frysinger <vapier@gentoo.org> +openssl-0.9.8q.ebuild:
+  Version bump.
+
+*openssl-1.0.0c (02 Dec 2010)
+
+  02 Dec 2010; Mike Frysinger <vapier@gentoo.org> +openssl-1.0.0c.ebuild:
+  Version bump.
 
   28 Nov 2010; Brent Baude <ranger@gentoo.org> openssl-0.9.8p.ebuild,
   openssl-1.0.0b-r1.ebuild:
